# opengl-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: frag.glsl
src/: file_loader.c  file_loader.h  main.c
